--- a/README
+++ b/README
@@ -1,15 +1,13 @@
-vty is a very simple terminal interface library.
+vty is a terminal interface library.
 
 Vty currently provides:
-
-* Automatic handling of suspend/resume (SIGTSTP+SIGCONT).
 
 * Automatic handling of window resizes.
 
 * Supports Unicode characters on output, automatically setting and
-  resetting UTF-8 mode (beware double width and combining characters!)
+  resetting UTF-8 mode for xterm. Other terminals are assumed to support 
 
-* Automatic computation of minimal differences.
+* Efficient output. 
 
 * Minimizes repaint area, thus virtually eliminating the flicker
   problem that plagues ncurses programs.
@@ -27,17 +25,13 @@ Vty currently provides:
 * Interface is designed for relatively easy compatible extension.
 
 * Supports all ANSI SGR-modes (defined in console_codes(4)) with
-  a simple type-safe interface.
+  a type-safe interface. 
 
-* Properly handles cleanup, leaving the cursor at the bottom of
-  the screen and erasing the last line.
+* Properly handles cleanup.
 
 Current disadvantages:
 
-* No current support for non-ANSI terminals.
-
-* UTF-8 support only works properly on the linux console/xterm,
-  and even then only if it is not the system default.
+* The character encoding of the output terminal is assumed to be UTF-8.
 
 * Minimal support for special keys on terminals other than the
   linux-console.  (F1-5 and arrow keys should work, but anything
@@ -46,9 +40,9 @@ Current disadvantages:
 * Uses the TIOCGWINSZ ioctl to find the current window size, which
   appears to be limited to Linux and *BSD.
 
-darcs get --tag=rel-3.0.0 http://code.haskell.org/vty/
+darcs get --tag=vty-4.0.0.1 http://code.haskell.org/vty/
 
-To compile the demonstration program: ghc --make Test.hs gwinsz.c
+To compile the demonstration program: ghc --make test/Test.hs gwinsz.c
 
-The main documentation consists of the haddock-comments and the
-demonstration program
+The main documentation consists of the haddock-comments and the demonstration
+program
