--- a/AUTHORS
+++ b/AUTHORS
@@ -13,3 +13,5 @@ The following people should be thanked for contributing to the vty library:
     * m.niloc
     * mikesteele81
     * Mikolaj Konarski
+    * Eyal Lotem
+    * Yoshikuni Jujo
