fix test coverage collection. Had to revert tests not depending on full library. Ah well.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+5.0.0
+    * API changes:
+
 4.7.0.0
     * API changes:
        * Added Graphics.Vty.Image.crop: Ensure an image is no larger than the specified size.
