--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,67 +1,71 @@
+5.1.0
+  - vmin and vtime can be specified however the application requires. See Graphics.Vty.Config.
+  - fixed the processing of input when vmin is set > 1.
+
 5.0.0
-    * The naming convention now matches:
-        * http://www.haskell.org/haskellwiki/Programming_guidelines#Naming_Conventions
-    * all projects using vty for input must be compiled with -threaded. Please notify vty author if
-      this is not acceptable.
-    * mkVtyEscDelay has been removed. Use "mkVty def". Which initialized vty with the default
-      configuration.
-    * input handling changes
-        * KASCII is now KChar
-        * KPN5 is now KCenter
-        * tests exist.
-        * Applications can add to the input tables by setting inputMap of the Config.
-          See Graphics.Vty.Config
-        * Users can define input table extensions that will apply to all vty applications.
-          See Graphics.Vty.Config
-        * terminal timing is now handled by selecting an appropriate VTIME. Previously this was
-          implemented within Vty itself. This reduced complexity in vty but provides a different
-          meta key behavior and implies a requirement on -threaded.
-        * The time vty will wait to verify an ESC byte means a single ESC key is the
-          singleEscPeriod of the Input Config structure.
-    * removed the typeclass based terminal and display context interface in favor of a data
-      structure of properties interface.
-    * renamed the Terminal interface to Output
-    * The default picture for an image now uses the "clear" background. This background fills
-      background spans with spaces or just ends the line.
-        * Previously the background defaulted to the space character. This causes issues copying
-          text from a text editor. The text would end up with extra spaces at the end of the line.
-    * Layer support
-        * Each layer is an image.
-        * The layers for a picture are a list of images.
-        * The first image is the top-most layer. The images are ordered from top to bottom.
-        * The transparent areas for a layer are the backgroundFill areas. backgroundFill is
-          added to pad images when images of different sizes are joined.
-        * If the background is clear there is no background layer.
-        * If there is a background character then the bottom layer is the background layer.
-        * emptyPicture is a Picture with no layers and no cursor
-        * addToTop and addToBottom add a layer to the top and bottom of the given Picture.
-    * compatibility improvements:
-        * terminfo based terminals with no cursor support are silently accepted. The cursor
-          visibility changes in the Picture will have no effect.
-        * alternate (setf/setb) color maps supported. Though colors beyond the first 8 are just a
-          guess.
-        * added "rgbColor" for easy support of RGB specified colors.
-        * Both applications and users can add to the mapping used to translate from input bytes to
-          events.
-    * Additional information about input and output process can be appended to a debug log
-        * Set environment variable VTY_DEBUG_LOG to path of debug log
-        * Or use "debugLog <path>" config directive
-        * Or set 'debugLog' property of the Config provided to mkVty.
-    * examples moved to vty-examples package. See test directory for cabal file.
-        * vty-interactive-terminal-test
-            * interactive test. Useful for building a bug report for vty's author.
-            * test/interactive_terminal_test.hs
-        * vty-event-echo
-            * view a input event log for vty. Example of interacting with user.
-            * test/EventEcho.hs
-        * vty-rouge
-            * The start of a rouge-like game. Example of layers and image build operations.
-            * test/Rouge.hs
-        * vty-benchmark
-            * benchmarks vty. A series of tests that push random pictures to the terminal. The
-              random pictures are generated using QuickCheck. The same generators used in the
-              automated tests.
-            * test/benchmark.hs
+  - The naming convention now matches:
+    - http://www.haskell.org/haskellwiki/Programming_guidelines#Naming_Conventions
+  - all projects using vty for input must be compiled with -threaded. Please notify vty author if
+    this is not acceptable.
+  - mkVtyEscDelay has been removed. Use "mkVty def". Which initialized vty with the default
+    configuration.
+  - input handling changes
+    - KASCII is now KChar
+    - KPN5 is now KCenter
+    - tests exist.
+    - Applications can add to the input tables by setting inputMap of the Config.
+      See Graphics.Vty.Config
+    - Users can define input table extensions that will apply to all vty applications.
+      See Graphics.Vty.Config
+    - terminal timing is now handled by selecting an appropriate VTIME. Previously this was
+      implemented within Vty itself. This reduced complexity in vty but provides a different meta
+      key behavior and implies a requirement on -threaded.
+    - The time vty will wait to verify an ESC byte means a single ESC key is the
+      singleEscPeriod of the Input Config structure.
+  - removed the typeclass based terminal and display context interface in favor of a data
+    structure of properties interface.
+  - renamed the Terminal interface to Output
+  - The default picture for an image now uses the "clear" background. This background fills
+    background spans with spaces or just ends the line.
+    - Previously the background defaulted to the space character. This causes issues copying
+      text from a text editor. The text would end up with extra spaces at the end of the line.
+  - Layer support
+    - Each layer is an image.
+    - The layers for a picture are a list of images.
+    - The first image is the top-most layer. The images are ordered from top to bottom.
+    - The transparent areas for a layer are the backgroundFill areas. backgroundFill is
+      added to pad images when images of different sizes are joined.
+    - If the background is clear there is no background layer.
+    - If there is a background character then the bottom layer is the background layer.
+    - emptyPicture is a Picture with no layers and no cursor
+    - addToTop and addToBottom add a layer to the top and bottom of the given Picture.
+  - compatibility improvements:
+    - terminfo based terminals with no cursor support are silently accepted. The cursor
+      visibility changes in the Picture will have no effect.
+    - alternate (setf/setb) color maps supported. Though colors beyond the first 8 are just a
+      guess.
+    - added "rgbColor" for easy support of RGB specified colors.
+    - Both applications and users can add to the mapping used to translate from input bytes to
+      events.
+  - Additional information about input and output process can be appended to a debug log
+    - Set environment variable VTY_DEBUG_LOG to path of debug log
+    - Or use "debugLog <path>" config directive
+    - Or set 'debugLog' property of the Config provided to mkVty.
+  - examples moved to vty-examples package. See test directory for cabal file.
+    - vty-interactive-terminal-test
+      - interactive test. Useful for building a bug report for vty's author.
+      - test/interactive_terminal_test.hs
+    - vty-event-echo
+      - view a input event log for vty. Example of interacting with user.
+      - test/EventEcho.hs
+    - vty-rouge
+      - The start of a rouge-like game. Example of layers and image build operations.
+      - test/Rouge.hs
+    - vty-benchmark
+      - benchmarks vty. A series of tests that push random pictures to the terminal. The
+        random pictures are generated using QuickCheck. The same generators used in the
+        automated tests.
+      - test/benchmark.hs
 
 4.7.0.0
     * API changes:
